--- a/package.xml
+++ b/package.xml
@@ -1,5 +1,31 @@
-<?xml version="1.0" encoding="UTF-8" standalone="yes"?>
+<?xml version="1.0" encoding="UTF-8"?>
 <Package xmlns="http://soap.sforce.com/2006/04/metadata">
-    <version>25.0</version>
+    <types>
+        <members>dreamforceDemoController</members>
+        <members>dreamforceDemoControllerTest</members>
+        <name>ApexClass</name>
+    </types>
+    <types>
+        <members>dreamforceDemo</members>
+        <name>ApexPage</name>
+    </types>
+    <types>
+        <members>Team_Development_for_ISVs</members>
+        <name>CustomApplication</name>
+    </types>
+    <types>
+        <members>EmailNotificationRates__c</members>
+        <name>CustomObject</name>
+    </types>
+    <types>
+        <members>Dreamforce_Demo</members>
+        <name>CustomTab</name>
+    </types>
+    <types>
+        <members>df_demo_css</members>
+        <members>df_demo_js</members>
+        <members>df_demo_shared</members>
+        <name>StaticResource</name>
+    </types>
+    <version>36.0</version>
 </Package>
-
